Increases header z-index to ensure overlay of scrolling images

--- a/src/styles/components/_navheader.scss
+++ b/src/styles/components/_navheader.scss
@@ -3,6 +3,7 @@
   top: 0;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.85);
+  z-index: 99;
 }
 
 .vertical-align {
